03-flux-apps/23.cloudflared/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-egress
  namespace: cloudflare
spec:
  endpointSelector:
    matchLabels:
      app: cloudflared
  egress:
  # DNS
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP

  # Cloudflare Edge (block all private IPs)
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "7844"
        protocol: TCP
      - port: "7844"
        protocol: UDP
